Add Prettier and TailwindCSS plugin, update Quill styling, and refactor layout and form components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,11 @@
 .dark .ql-stroke {
   stroke: hsl(var(--nextui-foreground)) !important;
 }
+
+.ql-toolbar {
+  border-radius: var(--nextui-radius-small) var(--nextui-radius-small) 0px 0px;
+}
+
+.ql-container {
+  border-radius: 0px 0px var(--nextui-radius-small) var(--nextui-radius-small);
+}
